--- a/app/src/main/res/layout/item_superhero.xml
+++ b/app/src/main/res/layout/item_superhero.xml
@@ -13,6 +13,7 @@
         app:cardElevation="8dp">
 
         <ImageView
+            android:id="@+id/pictureImageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:src="@mipmap/ic_launcher"
