--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -7,4 +7,45 @@
     android:layout_height="match_parent"
     tools:context=".activities.DetailActivity">
 
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+    
+    
+    
+    
+    
+    
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/navigationBar"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/menu_activity_detail_navigation"/>
+        
+        <include
+            android:id="@+id/biographyContent"
+            layout="@layout/content_biography"/>
+        <include
+            android:id="@+id/appearanceContent"
+            layout="@layout/content_appearance"/>
+        <include
+            android:id="@+id/statsContent"
+            layout="@layout/content_stats"/>
+    
+        
+    </LinearLayout>
+
+    
+    
+    
+    
+    
+    
+    
+    
 </androidx.constraintlayout.widget.ConstraintLayout>
