completando layout stats 2

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,5 +4,12 @@
     <color name="white">#FFFFFFFF</color>
     <color name="text_background">#BB737272</color>
 
+
+
+
+    <color name="alignment_color_good">#4CAF50</color>
+    <color name="alignment_color_bad">#F44336</color>
+    <color name="alignment_color_neutral">#4C8B94</color>
+
 </resources>
 
