--- a/app/src/main/res/layout/content_stats.xml
+++ b/app/src/main/res/layout/content_stats.xml
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textAlignment="textEnd"
-            android:text="Strengh"
+            android:text="Strength"
             android:layout_marginEnd="8dp"/>
 
         <TextView
@@ -61,7 +61,7 @@
             android:layout_marginHorizontal="8dp"/>
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:id="@+id/strengthProgressBar"
+            android:id="@+id/strenghtProgressBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
@@ -151,7 +151,7 @@
             android:layout_marginEnd="8dp"/>
 
         <TextView
-            android:id="@+id/powerextView"
+            android:id="@+id/powerTextView"
             android:layout_width="30dp"
             android:layout_height="wrap_content"
             android:text="100"
@@ -193,7 +193,7 @@
             android:layout_marginHorizontal="8dp"/>
 
         <com.google.android.material.progressindicator.LinearProgressIndicator
-            android:id="@+id/intelligenceProgressBar"
+            android:id="@+id/combatProgressBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="2"
